--- a/portfolio.html
+++ b/portfolio.html
@@ -95,11 +95,13 @@
                     alt="Banking App Interface Concept"
                     width="360"
                   />
-                  <p class="portfolio-paragraph">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
@@ -108,12 +110,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Cashless Payment</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -121,12 +132,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Meditation App</h2>
                   <p class="portfolio-text">App</p>
@@ -134,12 +154,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Taxi Service</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -147,12 +176,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
                   <p class="portfolio-text">Design</p>
@@ -160,12 +198,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Online Courses</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -173,12 +220,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
                   <p class="portfolio-text">Design</p>
@@ -186,12 +242,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Organic Food</h2>
                   <p class="portfolio-text">Web Site</p>
@@ -199,12 +264,21 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p>
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
                   <p class="portfolio-text">Web Site</p>
