--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,6 @@
                     alt="Banking App Interface Concept"
                     width="360"
                   />
-
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -116,13 +115,11 @@
                     alt="Cashless Payment"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Cashless Payment</h2>
@@ -138,13 +135,11 @@
                     alt="Meditation App"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Meditation App</h2>
@@ -160,13 +155,11 @@
                     alt="Taxi Service"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Taxi Service</h2>
@@ -182,13 +175,11 @@
                     alt="Screen Illustrations"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
@@ -204,13 +195,11 @@
                     alt="Online Courses"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Online Courses</h2>
@@ -226,13 +215,11 @@
                     alt="Instagram Stories Concept"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
@@ -248,13 +235,11 @@
                     alt="Organic Food"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Organic Food</h2>
@@ -270,13 +255,11 @@
                     alt="Fresh Coffee"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-subtitle">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
